# whitenoise

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  README.md  justfile  pubspec.yaml
.github/: labeler.yml
.github/workflows/: android-apk.yml  ci.yml  deploy-when-apk.yml  pr-labeler.yml
android/: .gitignore  key-staging.properties.example  key.properties.example
android/app/: build.gradle.kts
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  routes.dart
lib/hooks/: use_active_chat.dart  use_add_relay.dart  use_app_version.dart  use_chat_archive.dart  use_chat_list.dart  use_chat_list_search.dart  use_chat_messages.dart  use_chat_scroll.dart  use_create_group.dart  use_edit_profile.dart  use_follow_actions.dart  use_login_with_android_signer.dart  use_login_with_nsec.dart  use_mark_as_read.dart  use_media_upload.dart  use_message_search.dart  use_notifications_settings.dart  use_relay_resolution.dart  use_scroll_to_message.dart  use_user_search.dart  use_user_selection.dart  use_zapstore_update.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_pt.arb  app_ru.arb  app_tr.arb
lib/providers/: active_chat_provider.dart  auth_provider.dart  message_debug_log_provider.dart  notification_provider.dart
lib/screens/: chat_info_screen.dart  chat_invite_screen.dart  chat_list_screen.dart  chat_raw_debug_screen.dart  chat_screen.dart  edit_group_screen.dart  edit_profile_screen.dart  fatal_error_screen.dart  group_info_screen.dart  (+13 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: account_groups.rs  accounts.rs  chat_list.rs  drafts.rs  error.rs  groups.rs  media_files.rs  messages.rs  mod.rs  notifications.rs  signer.rs  user_search.rs  users.rs  utils.rs
scripts/: build_android.sh  build_ios.sh  build_openssl_android.sh  build_release.sh  check-coverage.sh  seed_test_follows.sh  setup_android_config.sh  when-apk.sh
test/: routes_test.dart  test_helpers.dart  theme_test.dart
widgetbook/: pubspec.yaml
(+203 files in other folders)
